@@ -57,7 +57,7 @@
 				<label for="tx_mnogosearch_pi1_l">###TEXT_SEARCH_WHERE###</label>
 				<span id="tx_mnogosearch_pi1_l">
 				<!-- ###SITESEL_OPTION### begin -->
-				<input type="radio" name="tx_mnogosearch_pi1[l][]"###CHECKED### value="###VALUE###" />###TEXT###
+				<input type="radio" class="reset" name="tx_mnogosearch_pi1[l][]"###CHECKED### value="###VALUE###" />###TEXT###
 				<!-- ###SITESEL_OPTION### end -->
 				</span>
 			</div>
@@ -68,14 +68,14 @@
 				<label for="tx_mnogosearch_pi1_l">###TEXT_SEARCH_WHERE###</label>
 				<span id="tx_mnogosearch_pi1_l">
 				<!-- ###SITESEL_OPTION### begin -->
-				<input type="checkbox" name="tx_mnogosearch_pi1[l][]"###CHECKED### value="###VALUE###" />###TEXT###
+				<input type="checkbox" class="reset" name="tx_mnogosearch_pi1[l][]"###CHECKED### value="###VALUE###" />###TEXT###
 				<!-- ###SITESEL_OPTION### end -->
 				</span>
 			</div>
 			<!-- ###SITESEL_CHECK### end -->
 
 			<div class="tx-mnogosearch-form-field">
-				<input type="submit" name="tx_mnogosearch_pi1[submit]" id="tx_mnogosearch_pi1_submit" value="###TEXT_SEARCH###" />
+				<input type="submit" class="reset" name="tx_mnogosearch_pi1[submit]" id="tx_mnogosearch_pi1_submit" value="###TEXT_SEARCH###" />
 			</div>
 		</fieldset>
 	</form>
