@@ -1,3 +1,7 @@
+2009-02-23  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Applied Emile's changes to the template
+
 2009-02-17  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed wrong CSS property
